--- a/.cproject
+++ b/.cproject
@@ -147,7 +147,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/doctest/doctest}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.preprocessor.def.2120935111" name="Defined symbols (-D)" superClass="gnu.cpp.compiler.option.preprocessor.def" useByScannerDiscovery="false" valueType="definedSymbols">
-									<listOptionValue builtIn="false" value="EVENT_WITH_DOCTEST"/>
+									<listOptionValue builtIn="false" value="GDT_WITH_DOCTEST"/>
 									<listOptionValue builtIn="false" value="TESTS"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.8658762" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
