--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.6)
 
 project(executable)
 
-set(CMAKE_CXX_FLAGS "-std=c++14 -D TESTS -D GDT_WITH_DOCTEST")
+set(CMAKE_CXX_FLAGS "-std=c++14 -D TESTS -D PIPELINE_WITH_DOCTEST -D GDT_WITH_DOCTEST")
 include_directories(src)
 include_directories(doctest/doctest)
 AUX_SOURCE_DIRECTORY(src SOURCES)
