Template buffer code + tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,15 @@ project(executable CXX)
 #set(CMAKE_CXX_FLAGS " -std=c++14 -DTESTS ")
 add_compile_options(-std=c++14)
 add_compile_options(-DTESTS)
-add_compile_options(-DEVENT_WITH_DOCTEST)
+#add_compile_options(-DEVENT_WITH_DOCTEST)
 
-add_compile_options(-DPIPE_WITH_DOCTEST)
-add_compile_options(-DPIPELINE_WITH_DOCTEST)
-add_compile_options(-DIFILTER_WITH_DOCTEST)
+#add_compile_options(-DPIPE_WITH_DOCTEST)
+#add_compile_options(-DPIPELINE_WITH_DOCTEST)
+#add_compile_options(-DIFILTER_WITH_DOCTEST)
 #add_compile_options(-DGDT_WITH_DOCTEST)
+
+add_compile_options(-DBUFFER_WITH_DOCTEST)
+add_compile_options(-DEVENTBUFFER_WITH_DOCTEST)
 
 
 include_directories(src)
