--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,13 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
+    - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
     packages:
     - gcc-4.9
     - g++-4.9
     - clang
+    - cmake
+    - cmake-data
 
 before_script:  
     - git clone https://github.com/onqtam/doctest.git
